--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,14 +16,7 @@
         android:layout_weight="1"
         >
 
-        <Button
-            android:id="@+id/srch"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/btn3"
-            android:enabled="true"
-            android:onClick="onClick"
-            android:textColor="#E91E63" />
+
 
     </LinearLayout>
 
@@ -68,9 +61,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="9"
+        android:orientation="vertical"
    >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            >
 
+
+
+        <EditText
+            android:id="@+id/sample_EditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/serachbar"
+
+        />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            >
+        </LinearLayout>
 
     </LinearLayout>
 
