--- a/app/src/main/res/layout/fragment_user_page.xml
+++ b/app/src/main/res/layout/fragment_user_page.xml
@@ -96,6 +96,95 @@
     </LinearLayout>
 
 
+    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
+
+    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+
+        <Button
+            android:id="@+id/toList"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:drawableTop="@drawable/list"
+            android:background="@drawable/btn2"
+            android:enabled="true"
+            android:onClick="onClick"
+            android:layout_weight="1"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:fontFamily="@font/font3"
+            android:textSize="15dp"
+            android:text="리스트"
+            android:textColor="#141414" />
+
+
+
+
+
+
+        <Button
+            android:id="@+id/toMyPg"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:drawableTop="@drawable/user"
+            android:background="@drawable/btn2"
+            android:enabled="true"
+            android:onClick="onClick"
+            android:fontFamily="@font/font3"
+            android:textSize="15dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="홈"
+            android:layout_weight="1"
+            android:textColor="#141414" />
+
+
+
+        <Button
+            android:id="@+id/toUd"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:drawableTop="@drawable/prefer"
+            android:background="@drawable/btn2"
+            android:enabled="true"
+            android:onClick="onClick"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="선호도 수정"
+            android:fontFamily="@font/font3"
+            android:textSize="15dp"
+            android:layout_weight="1"
+            android:textColor="#141414" />
+
+
+
+
+
+        <Button
+            android:id="@+id/toErl"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:drawableTop="@drawable/erl"
+            android:background="@drawable/btn2"
+            android:enabled="true"
+            android:onClick="onClick"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="레시피등록"
+            android:fontFamily="@font/font3"
+            android:textSize="15dp"
+            android:layout_weight="1"
+            android:textColor="#141414" />
+
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
