--- a/app/src/main/res/layout/fragment_enroll_recipe.xml
+++ b/app/src/main/res/layout/fragment_enroll_recipe.xml
@@ -163,7 +163,7 @@
             android:id="@+id/toUd"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawableTop="@drawable/prefer"
+            android:drawableTop="@drawable/home"
             android:background="@drawable/btn2"
             android:enabled="true"
             android:onClick="onClick"
