--- a/app/src/main/res/drawable/back.xml
+++ b/app/src/main/res/drawable/back.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/mike"
-        android:width="30dp"
-        android:height="30dp"
+        android:drawable="@drawable/bac"
+        android:width="40dp"
+        android:height="40dp"
         android:gravity="center"/>
 </layer-list>
