--- a/app/src/main/res/drawable/btn2.xml
+++ b/app/src/main/res/drawable/btn2.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <stroke
-                android:width="1dp"
-                android:color="#FFFFFF" />
+                android:width="0.5dp"
+                android:color="#8E9191" />
 
             <gradient
                 android:angle="0"
