--- a/app/src/main/res/layout/fragment_enroll_recipe.xml
+++ b/app/src/main/res/layout/fragment_enroll_recipe.xml
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Enroll Recipe"
+                android:text="레시피 등록"
                 android:textAlignment="center"
                 android:textSize="30dp"
                 android:fontFamily="@font/font"
@@ -50,7 +50,7 @@
                 android:id="@+id/bb"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/btn4"
+                android:background="@drawable/back"
                 android:enabled="true"
                 android:onClick="onClick"
                 android:textColor="#E91E63" />
@@ -131,7 +131,7 @@
             android:paddingRight="15dp"
             android:fontFamily="@font/font3"
             android:textSize="15dp"
-            android:text="홈"
+            android:text="리스트"
             android:textColor="#141414"
 
             />
