--- a/app/src/main/res/layout/fragment_food_list.xml
+++ b/app/src/main/res/layout/fragment_food_list.xml
@@ -57,7 +57,7 @@
                 android:id="@+id/tob"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/btn4"
+                android:background="@drawable/back"
                 android:enabled="true"
                 android:onClick="onClick"
                 android:textColor="#E91E63" />
@@ -73,7 +73,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="9"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="right">
+
+
+        <Button
+            android:id="@+id/move"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn2"
+            android:enabled="true"
+            android:onClick="onClick"
+            android:fontFamily="@font/font3"
+            android:text="레시피 보기"
+            android:textColor="#141414" />
+
 
 
     </LinearLayout>
