--- a/app/src/main/res/drawable/nxtb.xml
+++ b/app/src/main/res/drawable/nxtb.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/bac"
+        android:drawable="@drawable/left"
         android:width="30dp"
         android:height="30dp"
         android:gravity="center"/>
