--- a/app/src/main/res/layout/fragment_enroll_recipe.xml
+++ b/app/src/main/res/layout/fragment_enroll_recipe.xml
@@ -7,7 +7,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.2"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -32,13 +31,13 @@
             android:layout_weight="4"
             >
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="레시피 등록"
                 android:textAlignment="center"
-                android:textSize="30dp"
-                android:fontFamily="@font/font"
+                android:textSize="25dp"
+                android:fontFamily="@font/font3"
                 android:textColor="#000002"/>
         </LinearLayout>
 
@@ -130,7 +129,7 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:fontFamily="@font/font3"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:text="리스트"
             android:textColor="#141414"
 
@@ -150,7 +149,7 @@
             android:enabled="true"
             android:onClick="onClick"
             android:fontFamily="@font/font3"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:text="마이페이지"
@@ -171,7 +170,7 @@
             android:paddingRight="15dp"
             android:text="홈"
             android:fontFamily="@font/font3"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:layout_weight="1"
             android:textColor="#141414" />
 
@@ -191,7 +190,7 @@
             android:paddingRight="15dp"
             android:text="레시피등록"
             android:fontFamily="@font/font3"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:layout_weight="1"
             android:textColor="#141414" />
 
