--- a/app/src/main/res/layout/fragment_enroll_recipe.xml
+++ b/app/src/main/res/layout/fragment_enroll_recipe.xml
@@ -61,7 +61,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:orientation="vertical"
         >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -71,6 +73,17 @@
             android:textColor="#000002"/>
 
 
+
+        <Button
+            android:layout_marginTop="10dp"
+            android:id="@+id/check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="text"
+            android:background="@drawable/btn6"
+            android:text="파일 업로드" />
+
     </LinearLayout>
 
     <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
@@ -79,7 +92,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,13 +103,26 @@
             android:textColor="#000002"/>
 
 
+        <EditText
+            android:background="@drawable/inputbox"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:id="@+id/id1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColorHint="#032149"
+            android:inputType="text"
+            android:layout_gravity="center" />
+
+
     </LinearLayout>
     <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="3"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -105,6 +131,19 @@
             android:textSize="20dp"
             android:fontFamily="@font/font"
             android:textColor="#000002"/>
+
+
+        <EditText
+            android:background="@drawable/inputbox"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:id="@+id/id2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColorHint="#032149"
+            android:inputType="text"
+            android:layout_gravity="center" />
 
 
     </LinearLayout>
